# python-updatabot

./: LICENCE  README.md  push_release.sh  pypi_push.sh  pyproject.toml  python-updatabot.code-workspace
.github/workflows/: release.yml
src/updatabot/: __init__.py  finish.py  load_url.py  load_zip.py  logger.py  nomis_test.py  save.py
src/updatabot/nomis/: NomisDataset.py  NomisSearchHit.py  __init__.py  api.py  base_url.py  codelist.py  fetch.py  get_codelist.py  get_concept.py  get_dataset.py  get_dataset_overview.py  get_datasets.py  get_geography.py  nomisclient.py  query.py  search.py
src/updatabot/nomis/api/: __init__.py  api_common.py  fetch.py  fetch_codelist.py  fetch_concept.py  fetch_dataset_overview.py  fetch_geography.py  fetch_search.py  get_concept.py  get_datasets.py
src/updatabot/nomis/api/schema/: ResponseCodelist.py  ResponseConcept.py  ResponseDataset.py
src/updatabot/nomis/schema/: ResponseDataset.py  ResponseDatasetOverview.py  ResponseGeography.py  SchemaCodelist.py  SchemaCommon.py  SchemaConcept.py  SchemaDataset.py  SchemaDatasetOverview.py  SchemaGeography.py  __init__.py  ds_dataset_structure.py  ds_geography.py  ds_search.py
src/updatabot/ons/: __init__.py  load.py
src/updatabot/ons/schema/: ds_root.py  ds_version.py
