[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "updatabot"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Datascript library for https://updatabot.com"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "requests",
    "python-dotenv"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/updatabot/python-updatabot"
Issues = "https://github.com/updatabot/python-updatabot/issues"